--- a/src/useReducer/TaskApp/styles/list.styles.css
+++ b/src/useReducer/TaskApp/styles/list.styles.css
@@ -7,14 +7,18 @@
 		width: 600px;
 		height: 300px;
 		padding-bottom: 1em;
-
 		li {
 			display: flex;
-			justify-content: space-between;
 			border-bottom: 1px solid gray;
 			gap: 1em;
 			align-items: center;
 			padding: 5px;
+			height: 30px;
+			input[type='checkbox'] {
+				cursor: pointer;
+				font-size: 1.5em;
+				margin-top: 9px;
+			}
 			u {
 				text-decoration: line-through;
 				opacity: 0.6;
@@ -25,8 +29,9 @@
 				width: 100%;
 				justify-content: space-between;
 			}
-			button {
-				font-size: 0.6em;
+			svg {
+				cursor: pointer;
+				color: rgb(249, 66, 66);
 			}
 		}
 	}
@@ -34,18 +39,15 @@
 
 @media (max-width: 600px) {
 	.taskList ul {
-		width: 370px;
+		width: 345px;
 		height: auto;
-
 		li {
-			width: 360px;
+			width: 100%;
 			word-break: break-word;
 			p,
 			u {
 				gap: 1em;
-			}
-			button {
-				width: 110px;
+				text-align: center;
 			}
 		}
 	}
